Fix overflow

--- a/app/assets/stylesheets/mapnav.css.scss
+++ b/app/assets/stylesheets/mapnav.css.scss
@@ -21,7 +21,7 @@
 
 .mapnav-event {
   position:relative;
-
+  overflow:hidden;
 
   dl {
     background-color:#FFF;
